--- a/config/common.neon
+++ b/config/common.neon
@@ -21,4 +21,4 @@ services:
 	- App\Router\RouterFactory::createRouter
 	- App\Services\ParameterService(%appDir%, %site_name%)
 	- App\Models\TagManager
-	- App\Models\ImageManager('%wwwDir%/images')
+	- App\Models\ImageManager('%wwwDir%/images', '/images')
